fixed hero photo dimensions on mobile

--- a/src/sections/header/header.css
+++ b/src/sections/header/header.css
@@ -395,7 +395,7 @@ button.portfolio-btn {
     margin: 0 auto;
   }
   .self-photo {
-    width: fit-content;
+    width: 400px;
   }
   img {
     height: auto;
